--- a/Frontend/src/main/Application/src/app/track-list/track-list.component.html
+++ b/Frontend/src/main/Application/src/app/track-list/track-list.component.html
@@ -26,3 +26,6 @@ Duration:<input #durationInput>
   Add
 </button>
 
+Find input :<input #searchInput type = "text">
+<button (click)="findTrack(searchInput.value)"> Find</button>
+
