--- a/Frontend/src/main/Application/src/app/app.component.html
+++ b/Frontend/src/main/Application/src/app/app.component.html
@@ -1,3 +1,12 @@
-Root text!
-<app-track-list></app-track-list>
-<app-genre-list></app-genre-list>
+<h1 align="center">Information System!!! Здарова братюням</h1>
+<table align="center">
+  <tr>
+  <td>
+    <app-track-list></app-track-list>
+  </td>
+  <td>
+    <app-genre-list></app-genre-list>
+  </td>
+  </tr>
+</table>
+
