--- a/Frontend/src/main/Application/src/app/genre-list/genre-list.component.css
+++ b/Frontend/src/main/Application/src/app/genre-list/genre-list.component.css
@@ -31,4 +31,21 @@
 .table_genres td:last-of-type {
   text-align: center;
 }
+.alert  {
+  position: fixed;
+  top: 0;
+  right: 0.5rem;
+  border:1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.25rem;
+  padding: 2rem;
+  background: #fff;
+  color: #f65656;
+  box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.5);
+  transition:  all 0.2s ease-in-out;
+  opacity: 0;
+}
 
+.visible {
+  opacity: 1;
+  transform: translateY(1.25rem);
+}
