--- a/Frontend/src/main/Application/src/app/genre-list/genre-list.component.html
+++ b/Frontend/src/main/Application/src/app/genre-list/genre-list.component.html
@@ -1,4 +1,6 @@
-
+<div class="alert" [class.visible]="isVisible">
+  {{message}}
+</div>
 <p>
   Добавление и изменение жанров: <br>
   Название:<input #nameInput type = "text"/>
@@ -13,12 +15,14 @@
   <caption> Genres </caption>
   <tr>
     <th> Жанр</th>
+    <th> Удалить </th>
+    <th> Изменить </th>
   </tr>
   <tr *ngFor="let genre of genreListData.genres">
     <td>{{genre.title}}</td>
     <td>
       <button (click)="removeGenre(genre)">
-        Delete
+        Удалить
       </button>
     </td>
     <td>
