--- a/Frontend/src/main/Application/src/app/app.component.html
+++ b/Frontend/src/main/Application/src/app/app.component.html
@@ -1,9 +1,14 @@
-<h1 align="center">Information System!!! Здарова братюням</h1>
 
-<div class="tabs">
+
+<h1 align="center">Information System</h1>
+
+
+  <div class="tabs">
   <input type="radio" name="odin" checked="checked" id="vkl1"/><label for="vkl1">Треки</label><input type="radio" name="odin" id="vkl2"/><label for="vkl2">Жанры</label>
   <div><app-track-list></app-track-list></div>
   <div><app-genre-list></app-genre-list></div>
-</div>
+  </div>
+
+
 
 
