--- a/Frontend/src/main/Application/src/app/app.component.css
+++ b/Frontend/src/main/Application/src/app/app.component.css
@@ -1,4 +1,6 @@
 
+
+
 .tabs { position: relative; }
 
 .tabs > div, .tabs > input {
@@ -6,11 +8,39 @@
   min-height: 150px; /* 50px × 3 вкладки */
 }
 
-.tabs label { position: absolute; right: 0; top: 0; width: 50px; height: 50px; border: 1px solid #aaa; line-height: 50px; text-align: center; cursor: pointer; }
+ h1{
+  float: bottom;
+  font-size: 30px;
+  border-bottom: 6px solid #4caf50;
+  margin-bottom: 15px;
+  padding: 13px 0;
+   color: white;
+}
+
+
+
+.tabs label {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  cursor: pointer;
+  font-size: 13px;
+}
 .tabs label:nth-of-type(2) { top: 51px; /* 50px + 1px border */ }
 .tabs label:nth-of-type(3) { top: 102px; /* 50px + 1px border первой вкладки + 1px border второй вкладки */  }
-.tabs input[type="radio"]:checked + label { border-left: 1px solid #fff; }
+.tabs input[type="radio"]:checked + label {  }
+.tabs label{
+  color: white;
+  font-family: sans-serif;
+  border: 2px solid #4caf50;
+  border-radius: 15px;
+  margin: 10px;
+}
 
 .tabs > input:nth-of-type(1):checked ~ div:nth-of-type(1),
 .tabs > input:nth-of-type(2):checked ~ div:nth-of-type(2),
-.tabs > input:nth-of-type(3):checked ~ div:nth-of-type(3) { display: block; padding: 1px 55px 1px 5px; border: 1px solid #aaa; }
+.tabs > input:nth-of-type(3):checked ~ div:nth-of-type(3) { display: block; padding: 1px 55px 1px 5px;  }
