--- a/Frontend/src/main/Application/src/app/track-list/track-list.component.css
+++ b/Frontend/src/main/Application/src/app/track-list/track-list.component.css
@@ -1,12 +1,57 @@
+@import "https://use.fontawesome.com/releases/v5.5.0/css/all.css";
+.menu{
+  font-family: sans-serif;
+  width: 280px;
+  height: 150px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  color: white;
+}
+
+
+input{
+  width: 100%;
+  overflow: hidden;
+  font-size: 20px;
+  padding: 8px 0;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #4caf50;
+}
+i{
+  width: 26px;
+  float: left;
+  text-align: center;
+}
+
+button{
+  width: 100%;
+  background: none;
+  border: 2px solid #4caf50;
+  border-radius: 25px;
+  color: white;
+  padding: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 12px 0;
+}
+
+
+
 .table_tracks {
+  position: absolute;
+  top: 600px;
+  left: 30%;
   border-collapse: collapse;
-  border-left: 3px solid #F79361;
-  border-right: 3px solid #F79361;
-  border-bottom: 3px solid #F79361;
-  font-family: "Lucida Grande", sans-serif;
+  border-left: 3px solid #4caf50;
+  border-right: 3px solid #4caf50;
+  border-bottom: 3px solid #4caf50;
+  font-family: sans-serif;
 }
 .table_tracks caption {
-  background: #F79361;
+  background: #4caf50;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   padding: 10px;
@@ -18,6 +63,7 @@
   text-align: center;
   margin: 0;
 }
+
 .table_tracks td, .table_tracks th {
   padding: 10px;
 }
