--- a/Frontend/src/main/Application/src/app/track-list/track-list.component.html
+++ b/Frontend/src/main/Application/src/app/track-list/track-list.component.html
@@ -1,22 +1,31 @@
 <div class="alert" [class.visible]="isVisible">
   {{message}}
 </div>
-<p> Название:<input #nameInput type = "text"/> <br><br/>
-  Исполнитель:<input #authorInput type = "text"/> <br> <br/>
-  Aльбом:<input #albumInput type = "text"/>  <br> <br/>
-  Длительность трека: <input #durationInput type = "text"> <br> <br/>
-  <select #input name="genre_select" >
-    <option *ngFor="let genre of genreListData.genres" value="{{genre.id}}" > {{genre.title}} </option>
-  </select> <br> <br/>
-  <button (click)="addTrack(nameInput.value, authorInput.value, null, albumInput.value, durationInput.value, input.value, input.textContent)">
-    Add
-  </button> <br> <br/>
-  Введите название трека для поиска: <br>
-  <input #searchInput type = "text">
-  <button (click)="findTrack(searchInput.value)" > Искать</button>
-</p>
 
-<table class = "table_tracks">
+
+<div class="menu">
+
+
+    <input #nameInput type = "text" placeholder="Название"/> <br><br/>
+
+    <input #authorInput type = "text" placeholder="Исполнитель"/> <br> <br/>
+    <input #albumInput type = "text" placeholder="Альбом"/>  <br> <br/>
+    <input #durationInput type = "text" placeholder="Длительность трека"> <br> <br/>
+
+    <select #input name="genre_select" >
+      <option *ngFor="let genre of genreListData.genres" value="{{genre.id}}" > {{genre.title}} </option>
+    </select> <br> <br/>
+    <button (click)="addTrack(nameInput.value, authorInput.value, null, albumInput.value, durationInput.value, input.value, input.textContent)">
+      Добавить
+    </button> <br> <br/>
+    <br>
+    <input #searchInput type = "text" placeholder="Поиск трека">
+    <button (click)="findTrack(searchInput.value)" > Искать</button>
+
+</div>
+
+
+<table align="center" class = "table_tracks">
   <caption> Аудиотреки </caption>
   <tr>
     <th>Название</th>
