--- a/Frontend/src/main/Application/src/app/track-list/track-list.component.html
+++ b/Frontend/src/main/Application/src/app/track-list/track-list.component.html
@@ -21,7 +21,7 @@
     <br>
     <input #searchInput type = "text" placeholder="Поиск трека">
     <button (click)="findTrack(searchInput.value)" > Искать</button>
-
+  <button (click)="updateTableTrack()"> Обновить таблицу </button>
 </div>
 
 
@@ -52,6 +52,7 @@
     </td>
   </tr>
 </table>
+
 
 
 
