--- a/Frontend/src/main/Application/src/app/track-list/track-list.component.css
+++ b/Frontend/src/main/Application/src/app/track-list/track-list.component.css
@@ -13,12 +13,25 @@
 
 input{
   width: 100%;
+  color: white;
   overflow: hidden;
   font-size: 20px;
   padding: 8px 0;
   background: transparent;
   border: none;
   border-bottom: 1px solid #4caf50;
+}
+
+select{
+  width: 100%;
+  background: none;
+  border: 2px solid #4caf50;
+  border-radius: 25px;
+  color: white;
+  padding: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 12px 0;
 }
 i{
   width: 26px;
