--- a/Frontend/src/main/Application/src/app/genre-list/genre-list.component.css
+++ b/Frontend/src/main/Application/src/app/genre-list/genre-list.component.css
@@ -18,6 +18,7 @@ input{
   background: transparent;
   border: none;
   border-bottom: 1px solid #4caf50;
+  color: white;
 }
 
 button{
@@ -26,6 +27,30 @@ button{
   border: 2px solid #4caf50;
   border-radius: 25px;
   color: white;
+  padding: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 12px 0;
+}
+
+.delete{
+  width: 100%;
+  background: none;
+  border: 2px solid #4caf50;
+  border-radius: 25px;
+  color: black;
+  padding: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 12px 0;
+}
+
+.change{
+  width: 100%;
+  background: none;
+  border: 2px solid #4caf50;
+  border-radius: 25px;
+  color: black;
   padding: 5px;
   font-size: 18px;
   cursor: pointer;
