--- a/Frontend/src/main/Application/src/app/track-list/track-list.component.css
+++ b/Frontend/src/main/Application/src/app/track-list/track-list.component.css
@@ -27,7 +27,7 @@ select{
   background: none;
   border: 2px solid #4caf50;
   border-radius: 25px;
-  color: white;
+  color: #575757;
   padding: 5px;
   font-size: 18px;
   cursor: pointer;
@@ -45,6 +45,30 @@ button{
   border: 2px solid #4caf50;
   border-radius: 25px;
   color: white;
+  padding: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 12px 0;
+}
+
+.delete{
+  width: 100%;
+  background: none;
+  border: 2px solid #4caf50;
+  border-radius: 25px;
+  color: black;
+  padding: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 12px 0;
+}
+
+.change{
+  width: 100%;
+  background: none;
+  border: 2px solid #4caf50;
+  border-radius: 25px;
+  color: black;
   padding: 5px;
   font-size: 18px;
   cursor: pointer;
