--- a/Frontend/src/main/Application/src/styles.css
+++ b/Frontend/src/main/Application/src/styles.css
@@ -2,6 +2,6 @@ body{
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: url(bg.jpg) no-repeat;
+  background: url(bg.jpg) repeat-y fixed;
   background-size: cover;
 }
